RESOLVED FIXED186158
Don't paint the System Preview badge if the image isn't fully decoded
https://bugs.webkit.org/show_bug.cgi?id=186158
Summary Don't paint the System Preview badge if the image isn't fully decoded
Dean Jackson
Reported 2018-05-31 13:19:49 PDT
Don't paint the System Preview badge if the image isn't fully decoded
Attachments
Patch (1.55 KB, patch)
2018-05-31 13:23 PDT, Dean Jackson
graouts: review+
Dean Jackson
Comment 1 2018-05-31 13:20:13 PDT
Dean Jackson
Comment 2 2018-05-31 13:20:44 PDT
We paint the system preview badge even if it hasn’t been decoded yet. It leads to flashes of black if the image hasn’t been decoded before, or a flash of the previous blurred backdrop (when pinch zooming in).
Dean Jackson
Comment 3 2018-05-31 13:23:04 PDT
Dean Jackson
Comment 4 2018-05-31 13:37:31 PDT
Note You need to log in before you can comment on or make changes to this bug.