Don't paint the System Preview badge if the image isn't fully decoded https://bugs.webkit.org/show_bug.cgi?id=186158 <rdar://problem/40454866>

Reviewed by Antoine Quint.

Only paint the system preview badge if the image itself said
that it succeeded in drawing.

* rendering/RenderImage.cpp:
(WebCore::RenderImage::paintIntoRect): Check the ImageDrawResult.

Canonical link: https://commits.webkit.org/201578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232367 268f45cc-cd09-0410-ab3c-d52691b4dbfc